<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_large"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/movie_detail_loading_indicator_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="false" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_detail_poster_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large"
                android:contentDescription="@string/content_description_movie_poster" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/movie_detail_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="2017-03-16" />

                <TextView
                    android:id="@+id/movie_detail_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="6.8" />

                <Button
                    android:id="@+id/action_add_watchlist"
                    style="@style/WatchlistButton"
                    android:background="@color/colorAccent"
                    android:text="@string/movie_detail_add_watchlist"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/action_remove_watchlist"
                    style="@style/WatchlistButton"
                    android:background="@android:color/darker_gray"
                    android:text="@string/movie_detail_remove_watchlist"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/movie_detail_overview"
            style="@style/MediumTextView"
            tools:text="overview" />

        <TextView
            android:id="@+id/movie_detail_trailer_label"
            style="@style/MovieDetailLabel"
            android:text="@string/movie_detail_label_see_trailer" />

        <ImageButton
            android:id="@+id/action_see_trailer"
            android:layout_width="@dimen/trailer_image_button_width"
            android:layout_height="@dimen/trailer_image_button_height"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@string/content_description_action_see_trailer"
            android:src="@android:drawable/ic_media_play" />

        <TextView
            android:id="@+id/movie_detail_review_label"
            style="@style/MovieDetailLabel"
            android:text="@string/movie_detail_label_review"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_detail_review_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_small" />

    </LinearLayout>
</layout>
